erDiagram
  CLUBS ||--|| DEVELOPMENT_SETTINGS : configures
  CLUBS ||--o{ PLAYER_DEVELOPMENT_PROFILES : owns
  USERS ||--o{ PLAYER_DEVELOPMENT_PROFILES : player
  COACHES ||--o{ PLAYER_DEVELOPMENT_PROFILES : primary_coach

  CLUBS ||--o{ DEVELOPMENT_NOTES : owns
  USERS ||--o{ DEVELOPMENT_NOTES : player
  COACHES ||--o{ DEVELOPMENT_NOTES : author_coach

  CLUBS ||--o{ DEVELOPMENT_GOALS : owns
  USERS ||--o{ DEVELOPMENT_GOALS : player
  DEVELOPMENT_GOALS ||--o{ DEVELOPMENT_GOAL_UPDATES : tracks
  USERS ||--o{ DEVELOPMENT_GOAL_UPDATES : author

  CLUBS ||--o{ SKILL_TEMPLATES : owns
  SKILL_TEMPLATES ||--o{ SKILL_CATEGORIES : groups
  SKILL_CATEGORIES ||--o{ SKILL_CRITERIA : defines

  SKILL_TEMPLATES ||--o{ SKILL_ASSESSMENTS : used_by
  USERS ||--o{ SKILL_ASSESSMENTS : player
  COACHES ||--o{ SKILL_ASSESSMENTS : assessor
  SKILL_ASSESSMENTS ||--o{ SKILL_ASSESSMENT_SCORES : contains
  SKILL_CRITERIA ||--o{ SKILL_ASSESSMENT_SCORES : scored_as

  CLUBS ||--o{ REPORT_CARD_TEMPLATES : owns
  REPORT_CARD_TEMPLATES ||--o{ REPORT_CARDS : formats
  USERS ||--o{ REPORT_CARDS : player
  COACHES ||--o{ REPORT_CARDS : author_coach
  REPORT_CARDS ||--o{ REPORT_CARD_ITEMS : contains

  SESSIONS ||--o{ DEVELOPMENT_NOTES : related_context
  BOOKINGS ||--o{ DEVELOPMENT_NOTES : related_context
  PROGRAMS ||--o{ DEVELOPMENT_NOTES : related_context
  ATTENDANCE_RECORDS ||--o{ DEVELOPMENT_NOTES : related_context

